src/alkonlinequote.cpp
@@ -36,6 +36,16 @@ bool AlkOnlineQuote::Errors::operator &(Type t) const
     return m_type.contains(t);
 }
 
+bool AlkOnlineQuote::Errors::operator ==(Type t) const
+{
+    return m_type.size() == 1 && m_type.contains(t);
+}
+
+bool AlkOnlineQuote::Errors::operator !=(Type t) const
+{
+    return m_type.size() != 1 || !m_type.contains(t);
+}
+
 AlkOnlineQuote::AlkOnlineQuote(AlkOnlineQuotesProfile *profile, QObject *_parent)
     : QObject(_parent)
     , d(new Private(this))
